vue-router配置路由规则

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script>
+        window.APP_CONF = {}
+        window.APP_CONF.menuList = [] //左侧菜单列表
+        window.APP_CONF.dynamicMenuRoutesHasAdded = false // 动态菜单路由是否已经添加的状态标识
+        window.APP_CONF.contentTabDefault = {             // 内容标签页默认属性对象
+          'name': '',        // 名称, 由 this.$route.name 自动赋值（默认，名称 === 路由名称 === 路由路径）
+          'params': {},      // 参数, 由 this.$route.params 自动赋值
+          'query': {},       // 查询参数, 由 this.$route.query 自动赋值
+          'menuId': '',      // 菜单id（用于选中侧边栏菜单，与this.$store.state.sidebarMenuActiveName进行匹配）
+          'title': '',       // 标题
+          'isTab': true,     // 是否通过tab展示内容?
+          'iframeURL': ''    // 是否通过iframe嵌套展示内容? (以http[s]://开头, 自动匹配)
+        };
+    </script>
   </head>
   <body>
     <div id="app"></div>
