vue-router添加动态路由

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
           'title': '',       // 标题
           'isTab': true,     // 是否通过tab展示内容?
           'iframeURL': ''    // 是否通过iframe嵌套展示内容? (以http[s]://开头, 自动匹配)
-        };
+        }
+        window.APP_CONF.dynamicMenuRoutes = [] //动态菜单路由列表, 切换页面时匹配路由使用
     </script>
   </head>
   <body>
